--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="cabecera">
                 <div class="logo">
-                  <img src="https://drive.google.com/drive/u/0/folders/1IQH4FoIuo0cQhJnOaqF3FZhaiBxmj3k1/logo" alt="">
+                  <img src="https://drive.google.com/drive/u/0/folders/1IQH4FoIuo0cQhJnOaqF3FZhaiBxmj3k1/logo_charlie.jpg" alt="">
                 </div>
 
                 <div class="box">
